--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,19 @@
-#clock {
-    font-weight: bold;
-    font-size: 5em;
+.hidden {
+    display: none;
+}
+body > div {
     text-align: center;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     width: 100%;
+}
+
+body > div > h2 {
+    font-size: 3em;
     margin: 0;
+}
+#clock {
+    font-weight: bold;
+    font-size: 5em;
 }
