--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,16 @@
 .hidden {
     display: none;
 }
+body {
+    color: white;
+    margin: 0;
+    /*background-image: url("../images/3.jpeg");*/
+}
+body > img {
+    width: 100%;
+    position: fixed;
+    object-fit: cover;
+}
 body > div {
     text-align: center;
     position: absolute;
