--- a/src/style.css
+++ b/src/style.css
@@ -2,16 +2,16 @@
     display: none;
 }
 body {
-    color: white;
     margin: 0;
-    /*background-image: url("../images/3.jpeg");*/
 }
-body > img {
-    width: 100%;
+#app {
+    color: white;
     position: fixed;
-    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
-body > div {
+#app .content {
     text-align: center;
     position: absolute;
     top: 50%;
@@ -19,7 +19,7 @@ body > div {
     width: 100%;
 }
 
-body > div > h2 {
+#app > div > h2 {
     font-size: 3em;
     margin: 0;
 }
