--- a/src/style.css
+++ b/src/style.css
@@ -40,3 +40,8 @@ body {
     color: white;
     font-size: 1.3em;
 }
+#weather {
+    text-align: right;
+    margin: 15px;
+    font-style: italic;
+}
